package smarthome.persistence;

import smarthome.domain.sensortype.SensorType;
import smarthome.domain.vo.sensortype.SensorTypeIDVO;

public interface SensorTypeRepository extends Repository<SensorTypeIDVO, SensorType>{
}
